# my_gemm

./: .clangd  .gitignore  CMakeLists.txt
profile/: CMakeLists.txt  profile.cpp  profile.hpp  profile_cublas_gemm.cpp  profile_gemm_v1.cpp  profile_gemm_v2.cpp  profile_gemm_v3.cpp  profile_gemm_v4.cpp  profile_gemm_v5.cpp
src/: CMakeLists.txt  cublas_gemm.cuh  gemm_v1.cuh  gemm_v2.cuh  gemm_v3.cuh  gemm_v4.cuh  gemm_v5.cuh  gemm_v6.cuh
test/: CMakeLists.txt  gemm_ground_truth.hpp  test_gemm.cpp  test_gemm.hpp
